@@ -611,6 +611,11 @@ mjb.scanner.archivescan.rar=false
 # the last three characters will be an ellipse (...) 
 plugin.plot.maxlength=500
 
+# This is the maximum length of the outline that each plugin will use
+# If the outline is longer than this value it will be truncated and
+# the last three characters will be an ellipse (...) 
+plugin.outline.maxlength=300
+
 # This is the fully qualified name of the plugin class implementing 
 # the internet search for movies (both movies data and poster).
 #
@@ -707,7 +712,6 @@ filmdelta.getcdonposter=true
 ################################################################
 ## FilmKatalogus plugin parameters
 #
-filmkatalogus.outline.length=150
 filmkatalogus.getplot=true
 filmkatalogus.gettitle=true
 
